coined a better title

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Fire Damage in Toronto: A Study in Contributing Factors"
+title: "Fire Damage in Toronto: A Study of Contributing Factors"
 author: 
   - David Qi
 thanks: "Code and data are available at: https://github.com/UTDQi/Fire_Incidents"
